--- a/StudentAttendanceSystem/Views/Shared/_Layout.cshtml
+++ b/StudentAttendanceSystem/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Dashboards" asp-action="Index">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="AttendanceRecords" asp-action="Index">AttendanceRecords</a>
+                            @* <a class="nav-link text-dark" asp-area="" asp-controller="AttendanceRecords" asp-action="Index">AttendanceRecords</a> *@
                         </li>
                     </ul>
                 </div>
